--- a/viewer/svgtree-viewer.css
+++ b/viewer/svgtree-viewer.css
@@ -21,6 +21,20 @@
 	font-size: 14px; 
 }
 
+/* Scalability. */
+@media (max-width: 540px) {
+	.svgtree-viewer {
+		width: 320px;
+		font-size: 12px;
+	}
+}
+@media (min-width: 541px) and (max-width: 720px) {
+	.svgtree-viewer {
+		width: 480px;
+		font-size: 12px;
+	}
+}
+
 .svgtree-viewer header {
 	background: #444;
 	color: white;
